
syntax = "proto3";
// system_operate_log 操作日志
package operate;
option go_package = "./operate";
import "google/protobuf/timestamp.proto";

// SystemOperateLogObject 数据对象
message SystemOperateLogObject {
	// @inject_tag: db:"id" json:"id"
	optional int64 id = 1; //主键
	// @inject_tag: db:"username" json:"username"
	optional string username = 2; //用户账号
	// @inject_tag: db:"module" json:"module"
	optional string module = 3; //模块名称
	// @inject_tag: db:"request_method" json:"requestMethod"
	optional string request_method = 4; //请求方法名
	// @inject_tag: db:"request_url" json:"requestUrl"
	optional string request_url = 5; //请求地址
	// @inject_tag: db:"user_ip" json:"userIp"
	optional string user_ip = 6; //用户 ip
	// @inject_tag: db:"user_agent" json:"userAgent"
	optional string user_agent = 7; //UA
	// @inject_tag: db:"go_method" json:"goMethod"
	optional string go_method = 8; //方法名
	// @inject_tag: db:"go_method_args" json:"goMethodArgs"
	optional bytes go_method_args = 9; //方法的参数
	// @inject_tag: db:"start_time" json:"startTime"
	google.protobuf.Timestamp start_time = 10; //操作开始时间
	// @inject_tag: db:"duration" json:"duration"
	optional int32 duration = 11; //执行时长
	// @inject_tag: db:"channel" json:"channel"
	optional string channel = 12; //渠道
	// @inject_tag: db:"result" json:"result"
	optional int32 result = 13; //结果(0 成功/1 失败)
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 14; //创建人
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 15; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 16; //更新人
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 17; //更新时间
}
// SystemOperateLogTotalResponse 列表数据总量
message SystemOperateLogTotalResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemOperateLogCreateRequest 创建数据请求
message SystemOperateLogCreateRequest {
	SystemOperateLogObject data = 1;
}
// SystemOperateLogCreateResponse 创建数据响应
message SystemOperateLogCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemOperateLogUpdateRequest 更新数据请求
message SystemOperateLogUpdateRequest {
	// @inject_tag: db:"system_operate_log_id" json:"systemOperateLogId"
	int64 system_operate_log_id = 1; //主键
	SystemOperateLogObject data = 2;
}
// SystemOperateLogUpdateResponse 更新数据响应
message SystemOperateLogUpdateResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemOperateLogDeleteRequest 删除数据请求
message SystemOperateLogDeleteRequest {
	// @inject_tag: db:"system_operate_log_id" json:"systemOperateLogId"
	int64 system_operate_log_id = 1; //主键
}
// SystemOperateLogDeleteResponse 删除数据响应
message SystemOperateLogDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// SystemOperateLogRequest 查询单条数据请求
message SystemOperateLogRequest {
	// @inject_tag: db:"system_operate_log_id" json:"systemOperateLogId"
	int64 system_operate_log_id = 1; //主键
}
// SystemOperateLogResponse 查询单条数据响应
message SystemOperateLogResponse {
	int64 code = 1;
	string msg = 2;
	SystemOperateLogObject data = 3;
}
// SystemOperateLogListRequest 列表数据
message SystemOperateLogListRequest {
	
	// @inject_tag: db:"username" json:"username"
	optional string username = 1; // 用户账号
	// @inject_tag: db:"module" json:"module"
	optional string module = 2; // 模块名称
	// @inject_tag: db:"start_time" json:"startTime"
	google.protobuf.Timestamp start_time = 3; // 操作开始时间
	// @inject_tag: db:"result" json:"result"
	optional int32 result = 4; // 结果(0 成功/1 失败)

	// @inject_tag: db:"page_num" json:"pageNum"
	optional int64 page_num = 5;
	// @inject_tag: db:"page_size" json:"pageSize"
	optional int64 page_size = 6;
}

// SystemOperateLogListResponse 数据响应
message SystemOperateLogListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SystemOperateLogObject data = 3;
}
// SystemOperateLogListTotalRequest 列表数据
message SystemOperateLogListTotalRequest {
	
	// @inject_tag: db:"username" json:"username"
	optional string username = 1; // 用户账号
	// @inject_tag: db:"module" json:"module"
	optional string module = 2; // 模块名称
	// @inject_tag: db:"start_time" json:"startTime"
	google.protobuf.Timestamp start_time = 3; // 操作开始时间
	// @inject_tag: db:"result" json:"result"
	optional int32 result = 4; // 结果(0 成功/1 失败)

}


// SystemOperateLogService 服务
service SystemOperateLogService{
	rpc SystemOperateLogCreate(SystemOperateLogCreateRequest) returns (SystemOperateLogCreateResponse);
	rpc SystemOperateLogUpdate(SystemOperateLogUpdateRequest) returns (SystemOperateLogUpdateResponse);
	rpc SystemOperateLogDelete(SystemOperateLogDeleteRequest) returns (SystemOperateLogDeleteResponse);
	rpc SystemOperateLog(SystemOperateLogRequest) returns (SystemOperateLogResponse);
	rpc SystemOperateLogList(SystemOperateLogListRequest) returns (SystemOperateLogListResponse);
	rpc SystemOperateLogListTotal(SystemOperateLogListTotalRequest) returns (SystemOperateLogTotalResponse);
}
